--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ h1{
     text-align: center;
     background-color: brown;
     padding-bottom: 20px;
+    font-family: "Bungee Shade", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .intro-content h2{
@@ -14,12 +17,29 @@ h1{
 
 .intro-content p{
     margin-left: 25px;
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 20px;
 }
 
 h3{
-    text-align: center;
-    padding-top: 40px;
+    margin-left: 25px;
+    padding-top: 70px;
     padding-bottom: 20px;
+    font-family: "Pirata One", system-ui;
+    font-weight: 100;
+    font-style: normal;
+}
 
+h5{
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
 
+.row p{
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
