--- a/style.css
+++ b/style.css
@@ -158,3 +158,14 @@ article h5{
     font-style: normal;
     font-size: 20px;
 }
+
+.row {
+    padding-bottom: 60px;
+
+}
+
+.mb-5{
+    font-family: "Pirata One", system-ui;
+    font-weight: 100;
+    font-style: normal;
+}
