--- a/style.css
+++ b/style.css
@@ -169,3 +169,9 @@ article h5{
     font-weight: 100;
     font-style: normal;
 }
+
+.card-title h3{
+    font-family: "Saira Condensed", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+}
