--- a/style.css
+++ b/style.css
@@ -170,8 +170,11 @@ article h5{
     font-style: normal;
 }
 
-.card-title h3{
+.card-t {
     font-family: "Saira Condensed", sans-serif;
     font-weight: 800;
     font-style: normal;
+    margin-left: 0%;
+    padding-top: 0%;
+
 }
